force-app/main/default/objects/Snapshot__c/Snapshot__c.object-meta.xml
<CustomObject>
    <description>Target object for analytic snapshot to track group members</description>
    <label>Snapshot: ChatterGroup</label>
    <nameField>
        <label>Snapshot: ChatterGroup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot: ChatterGroup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>