force-app/main/default/objects/Snapshot__c/fields/Member_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Add_Date__c</fullName>
    <label>Member Add Date</label>
    <type>Date</type>
</CustomField>