force-app/main/default/objects/Snapshot__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <label>Member Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>